# jingyu-task

./: .dockerignore  .env.example  .gitignore  ACCEPTANCE_PROMPT.md  APPENDIX_web_voice.md  ARCHITECTURE_AB.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CHINA_CPAAS_MIGRATION_PLAN.md  DATA_MATCHING_PLAN.md  DEMO_SCRIPT.md  DEPLOY.md  DESIGN.md  DOCS.md  Dockerfile  FRAMEWORK_RESEARCH.md  GUIDE.md  ITERATION_SUMMARY.md  LOCAL_RUN_ISSUES.md  MODELS.md  NOTIFY_SETUP.md  PRODUCT_FLOW.md  PROGRESS.md  QR_DEMO.md  README.md  REMOTE_ACCESS.md  SESSION_HANDOFF.md  SETUP_CHECKLIST.md  SETUP_GUIDE.md  SMOKE_CHECK.md  TELEPHONY.md  TEST_TASKS.md  UPGRADE_PLAN.md  USER_TODO.md  WECHAT_PLAN.md  access.demo.json  access.example.json  fly.toml  pyproject.toml  requirements.txt  (+3 more)
docs/: index.html  profile-readme.md  使用指南.md
docs/assets/: README.md
scenarios/: d_blacklist.json  mianshi.json  roster_test.json  s2_letters.json  s3_changephone.json  s4_shortphone.json  s5_unknownco.json  s7_visit.json  songhuo.json
scripts/: run_agent.sh  run_sim.sh  run_tunnel.sh  run_web.sh  seed_demo.py  setup_sip.sh  setup_sip_outbound.sh  start.sh
src/visitor_agent/: __init__.py  access.py  agent.py  config.py  guard_query.py  prompts.py  providers.py  roster.py  (+6 more)
tests/: conftest.py  test_access.py  test_dashboard.py  test_db_confirm.py  test_gate.py  test_guard_console.py  test_guard_query_tools.py  test_handoff.py  test_integration.py  test_models.py  test_notify_channels.py  test_profiles.py  test_roster.py  test_session_logic.py  test_slots.py  test_tenant.py  test_voice_mode.py  test_wecom.py
(+16 files in other folders)
